--- a/123.html
+++ b/123.html
@@ -6,6 +6,97 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./123.js"></script>
+    <!-- <div>
+        <p class="taskTitle">ЗАВДАННЯ 1</p>
+        <button id="alertButton">SHOW ME</button>
+        <input id="alertInput" type="text" />
+    </div> -->
+    <!-- <input id="passwordInput" type="text" />
+    <button id="passwordButton">Приховати</button> -->
+
+    <!-- Task -03 -->
+    <!-- <div id="box"></div>
+    <button id="decrease">Зменшити</button>
+    <button id="increase">Збільшити</button> -->
+
+    <!-- Task -04 -->
+    <!-- <button id="swapButton">SWAP ME</button>
+    <input id="leftSwapInput" type="text" value="???" />
+    <input id="rightSwapInput" type="text" value="!!!" /> -->
+
+    <!-- Task -05 -->
+    <!-- <ul class="list">
+      <li class="listItem">1</li>
+      <li class="listItem">4</li>
+      <li class="listItem">8</li>
+      <li class="listItem">16</li>
+      <li class="listItem">20</li>
+      <li class="listItem">30</li>
+    </ul>
+    <button id="double">Подвоїти</button> -->
+
+    <!-- Task -06 -->
+    <!-- <form class="checkboxForm">
+      <div class="checkboxList">
+        <div class="checkboxWrapper">
+          <label for="checkbox1">Item 1</label>
+          <input type="checkbox" id="checkbox1" />
+        </div>
+
+        <div class="checkboxWrapper">
+          <label for="checkbox2">Item 2</label>
+          <input type="checkbox" id="checkbox2" />
+        </div>
+        <div class="checkboxWrapper">
+          <label for="checkbox3">Item 3</label>
+          <input type="checkbox" id="checkbox3" />
+        </div>
+        <div class="checkboxWrapper">
+          <label for="checkbox4">Item 4</label>
+          <input type="checkbox" id="checkbox4" />
+        </div>
+        <div class="checkboxWrapper">
+          <label for="checkbox5">Item 5</label>
+          <input type="checkbox" id="checkbox5" />
+        </div>
+        <div class="checkboxWrapper">
+          <label for="checkbox6">Item 6</label>
+          <input type="checkbox" id="checkbox6" />
+        </div>
+        <div class="checkboxWrapper">
+          <label for="checkbox7">Item 7</label>
+          <input type="checkbox" id="checkbox7" />
+        </div>
+      </div>
+      <button type="submit">Filter</button>
+    </form> -->
+
+
+    <!-- Task -07 -->
+    <!-- <ul class="people">
+      <li class="person">Peter Miller</li>
+      <li class="person">John Carter</li>
+      <li class="person">Amanda Diaz</li>
+      <li class="person">Brad Sanders</li>
+      <li class="person">Devis Brooks</li>
+      <li class="person">Robert Morgan</li>
+  </ul>
+  <button id="sortByNameButton" type="button">Sort by name</button>
+  <button id="sortByLastNameButton" type="button">Sort by lastname</button> -->
+
+<!-- Task -08 -->
+<!-- <input class="contactsFilter" type="text" />
+    <ul class="contacts">
+        <li class="contact">Peter Miller</li>
+        <li class="contact">John Carter</li>
+        <li class="contact">Amanda Diaz</li>
+        <li class="contact">Brad Sanders</li>
+        <li class="contact">Devis Brooks</li>
+        <li class="contact">Robert Morgan</li>
+    </ul> -->
+
+
+
+    <script src="./123.html"></script>
   </body>
 </html>
