--- a/123.html
+++ b/123.html
@@ -95,8 +95,40 @@
         <li class="contact">Robert Morgan</li>
     </ul> -->
 
+    <!-- 13.08.2023 -->
+    <!-- // task 1 -->
+    <!-- <div class="container">
+      <input type="text" id="searchInput" placeholder="Введіть назву товару">
+      <ul id="itemsContainer"></ul>
+      <div class="cart">
+          <h2>Кошик</h2>
+          <ul id="cartItemsContainer"></ul>
+      </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script> -->
+
+  <!-- // task 2 -->
+  <!-- <div class="toolbar"> -->
+    <!-- Розмітка перимикача теми -->
+        <!-- <div class="theme-switch__control">
+            <input class="theme-switch__toggle" type="checkbox" name="theme" id="theme-switch-toggle"
+                aria-label="Переключити між темною та світлою темою" />
+            <label aria-hidden="true" class="theme-switch__track" for="theme-switch-toggle">
+            </label>
+            <div aria-hidden="true" class="theme-switch__marker"></div>
+        </div>
+</div> -->
+
+ <!-- // task 3 -->
+ <form id="login-form">
+  <input type="email" name="email" />
+  <input type="password" name="password" />
+  <button name="button" type="submit">Login</button>
+</form>
 
 
-    <script src="./123.html"></script>
+    <!-- <script src="./123.html"></script> -->
+    <script src="./script.js"></script>
   </body>
 </html>
